<resources>
    <string name="app_name">FlightBag</string>
    <string name="access_token">pk.eyJ1IjoicGxpb3R0cmFpbmluZ3N5c3RlbSIsImEiOiJjaXd3YTF3ZDMwMGliMnpzYTM2MXdxd3g4In0.zwet3tWYd8ivRqxlgERjmA</string>
    <string name="toolbar_title_preflight">&#60;User Profile&#62;</string>

    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_msg_emptyname">Checklist Name Required!</string>
    <string name="dialog_title_err">Error</string>
    <string name="dialog_msg_dupname">Duplicate checklist name!\nAre you sure you want to replace the old one?</string>
    <string name="dialog_msg_dup">Duplicate checklist name!</string>
    <string name="dialog_title_new_checklist_name">New Checklist Name:</string>
    <string name="submit_checklist">Submit Checklist</string>
    <string name="dialog_isPermissonNeeded">Is Permisson Slip Required?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="checklist_cap">CHECKLIST</string>
    <string name="checklist">Checklist</string>
    <string name="sign_permisson">Sign Permisson</string>
    <string name="dialog_title_signature">Permisson Slip Signature</string>
    <string name="sign_signature">Signature</string>
    <string name="sign_fullname">Full Name</string>
    <string name="sign_date">Date</string>
    <string name="sign_street_address">Street Address</string>
    <string name="sign_city">City</string>
    <string name="sign_state">State</string>
    <string name="sign_email">Email (optional): </string>
    <string name="submit">Submit</string>
    <string name="button_permissonslip">permisson</string>
    <string name="dialog_delete_checklist">Are you sure you want to delete the checklist?</string>
    <string name="err_unrecoverable">This device is not supported.</string>
    <string name="text_display_title">Search Nearby</string>
    <string name="text_radius">Radius:</string>
    <string name="text_address">Address:</string>
    <string name="unit_miles">miles</string>
    <string name="text_optional"><font size="20"> (optional)</font></string>
    <string name="search_permisson">Search Permisson</string>
    <string name="toolbar_title_flight_plan">Flight Plan</string>

    <string name="flight_strictly_regulated">Flight Strictly Regulated</string>
    <string name="advisories">Advisories</string>
    <string name="informational">Informational</string>
    <string name="accepts_digital_notice">Accepts Digital Notice</string>
    <string name="unknown_size">Unknown Size</string>
    <string name="call">Call</string>
    <string name="hint_password">Password</string>
    <string name="action_register_short">Register</string>
    <string name="action_login_short">Login</string>
    <string name="action_reset_password_short">Reset Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="back_to_login"><![CDATA[<< back]]></string>

</resources>
