<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:focusable="true"
              android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="5dp"
        android:background="@color/primary_light"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_search"
            android:src="@drawable/ic_search_white_24dp"

            app:backgroundTint="@color/accent"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="auto"
            android:scaleType="centerCrop"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/search_titlebar"
            android:layout_alignParentEnd="true"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:id="@+id/search_titlebar"
        android:textColor="@color/icons"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="15pt"
        android:text="@string/text_display_title"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/button_done_search"
            android:src="@drawable/ic_clear_white_24dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_addr_search"
            android:layout_below="@id/search_titlebar"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="12pt"
            android:textColor="@android:color/black"
            android:text="@string/text_address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_radius"
            android:layout_below="@id/text_addr_search"
            android:layout_alignStart="@id/text_addr_search"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:textSize="12pt"
            android:textColor="@android:color/black"
            android:text="@string/text_radius"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_address_search"
            android:layout_toEndOf="@id/text_addr_search"
            android:layout_alignBaseline="@id/text_addr_search"
            android:layout_toStartOf="@id/button_search"
            android:background="@color/icons"
            android:paddingStart="5dp"
            android:maxLines="1"
            android:textSize="12pt"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_radius"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textAlignment="center"
            android:layout_marginEnd="5dp"
            android:layout_alignBaseline="@id/text_radius"
            android:layout_alignStart="@id/edit_address_search"
            android:background="@color/icons"
            android:maxLines="1"
            android:textSize="12pt"
            android:text="0.25"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/edit_radius"
            android:layout_alignBaseline="@id/edit_radius"
            android:textSize="12pt"
            android:textColor="@android:color/black"
            android:text="@string/unit_miles"/>


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:transcriptMode="alwaysScroll"
        android:scrollbarStyle="outsideInset"
        android:id="@+id/permissonlistview"/>


</LinearLayout>